--- a/docs/publikationen/qsp-10-2025.md
+++ b/docs/publikationen/qsp-10-2025.md
@@ -62,10 +62,13 @@ Interessierte sind eingeladen, sich auf der Projektseite zu informieren und einz
 
 ## Abbildungen
 
-![Platine Version 0.2](docs/img/remote-station-v0.2.jpg)  
+![Platine Version 0.2](img/remote-station-v0.2.png)  
 *Abb. 1: Die bestückten Platinen der Remote-Station in Version 0.2 – BusBoard, CM4Carrier, PowerBoard, DeviceTester und das neue FMTransceiver-Modul in einem 3D gedrucktem Gehäuse.*
 
-![FMTransceiver und DeviceTester zum Debuggen zusammengesteckt](docs/img/fm-device-debugging-v0.2.jpg)
+![Platine Version 0.2](img/remote-station-v0.2-top.png)  
+*Abb. 1: Die bestückten Platinen der Remote-Station in Version 0.2 – BusBoard, CM4Carrier, PowerBoard, DeviceTester und das neue FMTransceiver-Modul in einem 3D gedrucktem Gehäuse.*
+
+![FMTransceiver und DeviceTester zum Debuggen zusammengesteckt](img/fm-device-debugging-v0.2.png)
 *Abb. 2: Das FMTransceiver-Modul wird über das DeviceTester-Modul programmiert und getestet.*
 
 ```mermaid
