update image description

--- a/docs/publikationen/qsp-10-2025.md
+++ b/docs/publikationen/qsp-10-2025.md
@@ -63,13 +63,13 @@ Interessierte sind eingeladen, sich auf der Projektseite zu informieren und einz
 ## Abbildungen
 
 ![Platine Version 0.2](img/remote-station-v0.2.png)  
-*Abb. 1: Die bestückten Platinen der Remote-Station in Version 0.2 – BusBoard, CM4Carrier, PowerBoard, DeviceTester und das neue FMTransceiver-Modul in einem 3D gedrucktem Gehäuse.*
+*Abb. 1: Remote-Station in Version 0.2 – DeviceTester, FMTransceiver, CM4Carrier, PowerBoard und BusBoard in einem 3D gedrucktem Gehäuse.*
 
 ![Platine Version 0.2](img/remote-station-v0.2-top.png)  
-*Abb. 1: Die bestückten Platinen der Remote-Station in Version 0.2 – BusBoard, CM4Carrier, PowerBoard, DeviceTester und das neue FMTransceiver-Modul in einem 3D gedrucktem Gehäuse.*
+*Abb. 2: Ansicht der Remote-Station von oben.*
 
 ![FMTransceiver und DeviceTester zum Debuggen zusammengesteckt](img/fm-device-debugging-v0.2.png)
-*Abb. 2: Das FMTransceiver-Modul wird über das DeviceTester-Modul programmiert und getestet.*
+*Abb. 3: Das FMTransceiver-Modul wird über das DeviceTester-Modul programmiert und getestet.*
 
 ```mermaid
 flowchart TB
@@ -104,4 +104,4 @@ flowchart TB
   %% Versorgung
   PWR --> POWER
 ```
-*Abb. 2: Blockdiagramm der aktuellen Struktur mit Bus und Modulen.*
+*Abb. 4: Blockdiagramm der aktuellen Struktur mit Bus und Modulen.*
